// Use DBML to define your database structure
// Docs https//dbml.dbdiagram.io/docs

Table Role {
  id varchar [primary key]
  description text
}

Table User {
  id varchar [primary key]
  first_name varchar
  last_name varchar
  email varchar [unique]
  password varchar
  role_id varchar
  disabled boolean
  bio text
  age integer
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: User.role_id > Role.id
Ref: User.created_by_id > User.id
Ref: User.updated_by_id > User.id

Table Report {
  id integer [primary key]
  description text
  unit varchar
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: Report.created_by_id > User.id
Ref: Report.updated_by_id > User.id

Table City {
  id integer [primary key]
  name varchar
  longitude decimal
  latitude decimal
  country_id integer
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: City.created_by_id > User.id
Ref: City.updated_by_id > User.id

Table Country {
  id integer [primary key]
  name varchar
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp
}

Ref: City.country_id > Country.id
Ref: Country.created_by_id > User.id
Ref: Country.updated_by_id > User.id

Table ReportHistory {
  id integer [primary key]
  report_id integer
  city_id integer
  start_date timestamp
  end_date timestamp
  measure decimal
  created_by_id varchar
  created_at timestamp
  updated_by_id varchar
  updated_at timestamp

  Indexes {
    (report_id, city_id, start_date, end_date) [unique]
  }
}

Ref: ReportHistory.report_id > Report.id
Ref: ReportHistory.city_id > City.id
Ref: ReportHistory.created_by_id > User.id
Ref: ReportHistory.updated_by_id > User.id
